Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/Segment_Category_Mapping__c.object-meta.xml
<CustomObject>
    <label>Segments Database</label>
    <nameField>
        <displayFormat>SC-{0000000000}</displayFormat>
        <label>Segment Category Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segments Database</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>