Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segments Database ID</label>
    <type>Text</type>
</CustomField>