Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/Custom_Segment_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Custom_Segment_Lead_Source__c</fullName>
    <label>Custom Segment Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Eyeota</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>