Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/Data_Asset_Account__c.field-meta.xml
<CustomField>
    <fullName>Data_Asset_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Asset Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Data Asset</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Segments Database (Data Asset Account)</relationshipLabel>
    <relationshipName>Segment_Category_Mappings1</relationshipName>
    <type>Lookup</type>
</CustomField>