Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/DataXu_ID__c.field-meta.xml
<CustomField>
    <fullName>DataXu_ID__c</fullName>
    <label>DataXu ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>