Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/DBM_ID__c.field-meta.xml
<CustomField>
    <fullName>DBM_ID__c</fullName>
    <label>DBM ID</label>
    <length>225</length>
    <type>Text</type>
</CustomField>