Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/Ingestion_Onboarding_Type__c.field-meta.xml
<CustomField>
    <fullName>Ingestion_Onboarding_Type__c</fullName>
    <formula>Data_Asset_Account__r.Ingestion_Onboarding_Type_Reporting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ingestion/Onboarding Type</label>
    <type>Text</type>
</CustomField>