Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/Lotame_ID__c.field-meta.xml
<CustomField>
    <fullName>Lotame_ID__c</fullName>
    <label>Lotame ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>