Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/MediaMath_ID__c.field-meta.xml
<CustomField>
    <fullName>MediaMath_ID__c</fullName>
    <label>MediaMath ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>