Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/mPlatform_ID__c.field-meta.xml
<CustomField>
    <fullName>mPlatform_ID__c</fullName>
    <label>mPlatform ID (Asia)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>