Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/New_Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>New_Taxonomy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Taxonomy</label>
    <type>Checkbox</type>
</CustomField>