Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/Pubmatic_ID__c.field-meta.xml
<CustomField>
    <fullName>Pubmatic_ID__c</fullName>
    <label>Pubmatic ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>