Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/Quantcast_ID__c.field-meta.xml
<CustomField>
    <fullName>Quantcast_ID__c</fullName>
    <label>Quantcast ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>