Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/Rate_Card_CPM__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_CPM__c</fullName>
    <label>Display Rate Card CPM ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>