Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/Segment_Content_1_ADTNEW_2018__c.field-meta.xml
<CustomField>
    <fullName>Segment_Content_1_ADTNEW_2018__c</fullName>
    <label>Segment Content 1 (ADT NEW-2018)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>