Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/Segment_Description__c.field-meta.xml
<CustomField>
    <fullName>Segment_Description__c</fullName>
    <label>Segment Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>