Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/Segment_Status__c.field-meta.xml
<CustomField>
    <fullName>Segment_Status__c</fullName>
    <label>Segment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active-Public</fullName>
            </value>
            <value>
                <fullName>Active-Private (PDMP)</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Inactive-Private (PDMP)</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Active-Name Changed</fullName>
            </value>
            <value>
                <fullName>Active-Private (Custom)</fullName>
            </value>
            <value>
                <fullName>Inactive-Private (Custom)</fullName>
            </value>
            <value>
                <fullName>Active - Name Changed</fullName>
                <isActive>false</isActive>
                <label>Active - Name Changed</label>
            </value>
            <value>
                <fullName>Active - Private</fullName>
                <isActive>false</isActive>
                <label>Active - Private</label>
            </value>
            <value>
                <fullName>Active - Public</fullName>
                <isActive>false</isActive>
                <label>Active - Public</label>
            </value>
            <value>
                <fullName>Active Private</fullName>
                <isActive>false</isActive>
                <label>Active Private</label>
            </value>
            <value>
                <fullName>Active Public</fullName>
                <isActive>false</isActive>
                <label>Active Public</label>
            </value>
            <value>
                <fullName>Active-Private</fullName>
                <isActive>false</isActive>
                <label>Active-Private (Custom)</label>
            </value>
            <value>
                <fullName>Archived</fullName>
                <isActive>false</isActive>
                <label>Archived</label>
            </value>
            <value>
                <fullName>CombiPMP</fullName>
                <isActive>false</isActive>
                <label>CombiPMP</label>
            </value>
            <value>
                <fullName>Custom</fullName>
                <isActive>false</isActive>
                <label>Custom</label>
            </value>
            <value>
                <fullName>Hitwise Public</fullName>
                <isActive>false</isActive>
                <label>Hitwise Public</label>
            </value>
            <value>
                <fullName>Inactive-Private</fullName>
                <isActive>false</isActive>
                <label>Inactive-Private (Custom)</label>
            </value>
            <value>
                <fullName>PDMP</fullName>
                <isActive>false</isActive>
                <label>PDMP</label>
            </value>
            <value>
                <fullName>SegStatus_Active-Private (Custom)</fullName>
                <isActive>false</isActive>
                <label>SegStatus_Active-Private (Custom)</label>
            </value>
            <value>
                <fullName>exuk.fss.g.multi</fullName>
                <isActive>false</isActive>
                <label>exuk.fss.g.multi</label>
            </value>
            <value>
                <fullName>fss.multi</fullName>
                <isActive>false</isActive>
                <label>fss.multi</label>
            </value>
            <value>
                <fullName>fss.t.multi</fullName>
                <isActive>false</isActive>
                <label>fss.t.multi</label>
            </value>
            <value>
                <fullName>ml.b2bdem.cr.multi</fullName>
                <isActive>false</isActive>
                <label>ml.b2bdem.cr.multi</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>