Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/Segment_Subcategory_NEW_2018__c.field-meta.xml
<CustomField>
    <fullName>Segment_Subcategory_NEW_2018__c</fullName>
    <label>Segment Subcategory (NEW-2018)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B Intent</fullName>
            </value>
            <value>
                <fullName>B2B Interest</fullName>
            </value>
            <value>
                <fullName>B2B Product Ownership</fullName>
            </value>
            <value>
                <fullName>Company Size</fullName>
            </value>
            <value>
                <fullName>Firmographic</fullName>
            </value>
            <value>
                <fullName>Functional Area</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Seniority</fullName>
            </value>
            <value>
                <fullName>Brand Affinity</fullName>
            </value>
            <value>
                <fullName>Brand Intent</fullName>
            </value>
            <value>
                <fullName>In-market</fullName>
            </value>
            <value>
                <fullName>Likely to Purchase</fullName>
            </value>
            <value>
                <fullName>General Interest</fullName>
            </value>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Brand Ownership</fullName>
            </value>
            <value>
                <fullName>Product Ownership</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Special Events</fullName>
            </value>
            <value>
                <fullName>Demographic</fullName>
            </value>
            <value>
                <fullName>Household</fullName>
            </value>
            <value>
                <fullName>Sociodemographic Profiles</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>