Sandbox/07-04-2025/force-app/main/default/objects/Segment_Category_Mapping__c/fields/TubeMogul_ID__c.field-meta.xml
<CustomField>
    <fullName>TubeMogul_ID__c</fullName>
    <label>TubeMogul ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>